Fixed image filling aspect ratio + box shadow order
The box shadow has to be pushed after the content, but before the
scrollbar.

Since the image width / height gets respected in the layout pass,
there is no need for adjusting the width and height of the image
later on.

This will however probably lead to bad results with CSS backgrounds
(? - untested).

--- a/examples/hot_reload.css
+++ b/examples/hot_reload.css
@@ -54,6 +54,7 @@
 }
 
 #cat {
-    /*background: image("Cat01");*/
-    max-width: 500px;
+    max-width: 400px;
+    box-shadow-bottom: 0px 0px 50px black inset;
+    box-shadow-top: 0px 0px 50px black inset;
 }
